[gd_scene load_steps=17 format=2]

[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Symbols/Smiley.png" type="Texture" id=5]
[ext_resource path="res://Assets/Numbers/5.png" type="Texture" id=6]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=7]
[ext_resource path="res://Assets/Numbers/4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Numbers/8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Operators/plus.png" type="Texture" id=10]
[ext_resource path="res://Levels/Level13/Level13.gd" type="Script" id=11]
[ext_resource path="res://Assets/Numbers/3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Numbers/9.png" type="Texture" id=14]
[ext_resource path="res://Assets/Symbols/Laughy.png" type="Texture" id=15]
[ext_resource path="res://Assets/Numbers/6.png" type="Texture" id=16]

[node name="Level13" instance=ExtResource( 1 )]
script = ExtResource( 11 )

[node name="TrueRect" parent="." index="0"]
margin_left = 148.74
margin_top = 126.041
margin_right = 164.74
margin_bottom = 142.041
rect_scale = Vector2( 30, 20 )

[node name="TextureRect" type="TextureRect" parent="." index="6"]
margin_left = 214.522
margin_top = 171.637
margin_right = 230.522
margin_bottom = 187.637
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="TextureRect6" type="TextureRect" parent="." index="7"]
margin_left = 345.295
margin_top = 261.325
margin_right = 361.295
margin_bottom = 277.325
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="TextureRect7" type="TextureRect" parent="." index="8"]
margin_left = 347.676
margin_top = 170.844
margin_right = 363.676
margin_bottom = 186.844
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 12 )

[node name="TextureRect8" type="TextureRect" parent="." index="9"]
margin_left = 417.521
margin_top = 259.738
margin_right = 433.521
margin_bottom = 275.738
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="TextureRect9" type="TextureRect" parent="." index="10"]
margin_left = 479.305
margin_top = 262.69
margin_right = 495.305
margin_bottom = 278.69
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="." index="11"]
margin_left = 343.92
margin_top = 347.621
margin_right = 359.92
margin_bottom = 363.621
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect12" type="TextureRect" parent="." index="12"]
margin_left = 389.329
margin_top = 347.621
margin_right = 405.329
margin_bottom = 363.621
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="." index="13"]
margin_left = 287.355
margin_top = 170.844
margin_right = 303.355
margin_bottom = 186.844
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="." index="14"]
margin_left = 288.942
margin_top = 256.563
margin_right = 304.942
margin_bottom = 272.563
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="TextureRect10" type="TextureRect" parent="." index="15"]
margin_left = 288.148
margin_top = 349.097
margin_right = 304.148
margin_bottom = 365.097
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="." index="16"]
margin_left = 213.54
margin_top = 255.77
margin_right = 229.54
margin_bottom = 271.77
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 15 )

[node name="TextureRect3" type="TextureRect" parent="." index="17"]
margin_left = 213.54
margin_top = 348.633
margin_right = 229.54
margin_bottom = 364.633
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 15 )

[node name="MovableButton" parent="." index="18" instance=ExtResource( 2 )]
margin_left = 694.977
margin_top = 310.682
margin_right = 710.977
margin_bottom = 326.682
text = ExtResource( 4 )

[node name="MovableButton2" parent="." index="19" instance=ExtResource( 2 )]
margin_left = 933.817
margin_top = 146.0
margin_right = 949.817
margin_bottom = 162.0
texture_normal = ExtResource( 13 )
text = ExtResource( 13 )

[node name="MovableButton3" parent="." index="20" instance=ExtResource( 2 )]
margin_left = 775.035
margin_top = 372.0
margin_right = 791.035
margin_bottom = 388.0
texture_normal = ExtResource( 8 )
text = ExtResource( 8 )

[node name="MovableButton4" parent="." index="21" instance=ExtResource( 2 )]
margin_left = 687.035
margin_top = 174.0
margin_right = 703.035
margin_bottom = 190.0
texture_normal = ExtResource( 6 )
text = ExtResource( 6 )

[node name="MovableButton5" parent="." index="22" instance=ExtResource( 2 )]
margin_left = 788.035
margin_top = 214.0
margin_right = 804.035
margin_bottom = 230.0
texture_normal = ExtResource( 16 )
text = ExtResource( 16 )

[node name="MovableButton6" parent="." index="23" instance=ExtResource( 2 )]
margin_left = 889.035
margin_top = 327.0
margin_right = 905.035
margin_bottom = 343.0
texture_normal = ExtResource( 9 )
text = ExtResource( 9 )
